Add links to stylesheets

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Form Tags</title>
+        <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Titillium+Web&display=swap" rel="stylesheet"> 
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
 
@@ -24,7 +25,8 @@
 
             <p>The <code>&lt;form&gt;</code>'s
                 <strong>method</strong> attribute determines 
-                how the information is sent and processed.</p>
+                how the information is sent and processed.
+                It could be <em>GET</em> or <em>POST</em></p>
 
             <p>When a form is submitted, the name of the
                 fields that accept input and the value of
@@ -124,6 +126,7 @@
                 with <code>&lt;option&gt;</code> element and
                 renders a dropdown list selection.
             </p>
+            <br>
 
             <h3>The <code>&lt;datalist&gt;</code> element</h3>
 
@@ -131,7 +134,8 @@
             is populated with <code>&lt;option&gt;</code>  
             element and works with an <code>&lt;input&gt;</code>
             to search through choices.</p>
-
+            
+            <br>
             <h3>The <code>&lt;textarea&gt;</code> element</h3>
 
             <p>The <code>&lt;textarea&gt;</code> element is a
