Remove <hr> and fix a missing </code>

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
             </p>
         </div>
 
-        <hr>
-
         <!-- CLASS INPUT -->
         <div class="input">
             <h3>The <code>&lt;input&gt;</code>
@@ -116,13 +114,11 @@
         
         </div>
 
-        <hr>
-
         <!-- CLASS OTHER -->
         <div class="other">
             <h3>The <code>&lt;select&gt;</code> element</h3>
 
-            <p>The <code>&lt;select&gt; element is populated
+            <p>The <code>&lt;select&gt;</code> element is populated
                 with <code>&lt;option&gt;</code> element and
                 renders a dropdown list selection.
             </p>
